samples/_failures_safe/1761511556_e8310a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b8e7d4a.c: In function ‘main’:
./samples/SAFE/__tmp_0b8e7d4a.c:165:13: error: expected expression at end of input
  165 |             case
      |             ^~~~
./samples/SAFE/__tmp_0b8e7d4a.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0b8e7d4a.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0b8e7d4a.c:165:13: error: expected declaration or statement at end of input
